--- a/app/src/main/res/layout/activity_register_new_client.xml
+++ b/app/src/main/res/layout/activity_register_new_client.xml
@@ -153,6 +153,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/bg_cr4_liteblack"
                 android:enabled="false"
+                android:inputType="number"
                 android:fontFamily="More Fonts..."
                 android:hint="6 digit pin"
                 android:paddingLeft="8dp"
