--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="lite_ash">#D1D1D1</color>
     <color name="litegreen">#3FB643</color>
     <color name="Misti">#ffd89b</color>
+    <color name="litebg">#F2F2F2</color>
 </resources>
