--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="black7">#777777</color>
     <color name="black8">#888888</color>
     <color name="red_dark">#D53B2F</color>
+    <color name="red">#F81100</color>
 
 
     <color name="colorPrimary">#FFC107</color>
