--- a/app/src/main/res/layout/activity_register_new_rider.xml
+++ b/app/src/main/res/layout/activity_register_new_rider.xml
@@ -143,6 +143,17 @@
 
         </RadioGroup>
 
+        <TextView
+            android:id="@+id/tv_credential"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:text="Credential"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@+id/rgRiderVehicleType"
+            app:layout_constraintTop_toBottomOf="@+id/rgRiderVehicleType" />
+
         <Button
             android:id="@+id/btnRiderRegistration"
             android:layout_width="0dp"
