--- a/app/src/main/res/layout/activity_register_new_rider.xml
+++ b/app/src/main/res/layout/activity_register_new_rider.xml
@@ -67,6 +67,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <EditText
+            android:visibility="gone"
             android:id="@+id/etOTP"
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -84,6 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/btnPhoneAuth"
             android:layout_width="100dp"
             android:layout_height="50dp"
